# headway

./: .gitignore  AboutDialog.qml  CMakeLists.txt  Cell.qml  CellCanvas.qml  ControlToolBar.qml  CreateRandomCellsDialog.qml  CreateWorldDialog.qml  Doxyfile  Doxyfile.in  MainWindow.qml  README.md  config.hpp  file.hpp  headway.pro  jsonfile.cpp  jsonfile.hpp  main.cpp  matrix.hpp  qml.qrc  test.cpp  test.hpp  world.cpp  world.hpp  xmlfile.cpp  xmlfile.hpp
examples/: flower.json  flower.xml  headway.xsd  ten.json  ten.xml  tumbler.json  tumbler.xml
i18n/: de.ts
src/: app.cpp  app.hpp  file.hpp  json_file.cpp  json_file.hpp  main.cpp  matrix.hpp  window.cpp  window.hpp  world.cpp  world.hpp  world_test.cpp  xml_file.cpp  xml_file.hpp
tests/: main_test.cpp  world_test.cpp  world_test.hpp
